--- a/indexR.html
+++ b/indexR.html
@@ -37,7 +37,7 @@
 <body id="page-top" class="index">
 
     <!-- Navigation -->
-    <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
+    <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-custom-index navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -46,7 +46,7 @@
                 </button>
                 
                 
-                <a id="rollerLogo" href="#page-top" class="navbar-brand page-scroll"><img style="max-width:220px" src="img/logo.png"></a>
+                <a id="rollerLogo" href="indexR.html" class="navbar-brand page-scroll"><img style="max-width:220px" src="img/logo.png"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -68,7 +68,7 @@
                         <a class="page-scroll" href="#events">Events</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#fitness">Fitness</a>
+                        <a class="page-scroll" href="gallery.php">Gallery</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
