--- a/indexR.html
+++ b/indexR.html
@@ -221,16 +221,16 @@
             
             <div class="row text-center">
                 <div class="col-md-3">
-                    <img src="img/events/schooltour02.png" class="img-responsive" alt="">
+                    <img src="img/gallery/Main_Gallery/23.jpg" class="img-responsive" alt="">
                 </div>
                 <div class="col-md-3">
-                    <img src="img/events/schooltour02.png" class="img-responsive" alt="">
+                    <img src="img/gallery/Main_Gallery/28.jpg" class="img-responsive" alt="">
                 </div>
                 <div class="col-md-3">
-                    <img src="img/events/schooltour02.png" class="img-responsive" alt="">
+                    <img src="img/gallery/Main_Gallery/13177903_1151287118256067_112625869465381385_n.jpg" class="img-responsive" alt="">
                 </div>
                 <div class="col-md-3">
-                    <img src="img/events/schooltour02.png" class="img-responsive" alt="">
+                    <img src="img/gallery/Main_Gallery/img_t95.jpg" class="img-responsive" alt="">
                 </div>
             </div>
         </div>
